# sCMS

./: README.md
admin-api/: .env  .gitignore  Cargo.toml  admin.db
admin-api/src/: main.rs
admin-api/src/endpoints/: users.rs
admin-api/src/models/: user.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.vue
ui/src/components/layouts/: nav_authed.vue  sidenav_authed.vue
ui/src/router/: index.ts
