[package]
name = "admin-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
serde = "1.0.144"
sqlx = { version = "0.6.1", features = ["runtime-tokio-native-tls", "json", "sqlite", "uuid"] }
tokio = { version = "1.21.0", features=["full"]}
serde_json = "1.0.57"
anyhow = "1.0.58"
